--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,24 @@
    Customs: Ricky Rick
    ========================================================================== */
 
+.background
+{   
+    background: url('../img/background.png') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    position: absolute;
+    width: 100%; height: 100%;
+    
+    text-align: center;
+}
+
+.background img
+{
+}
+
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
