--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
    Customs: Ricky Rick
    ========================================================================== */
 
+/* Background styles*/
 .background
 {   
     background: url('../img/background.png') no-repeat center center fixed; 
@@ -22,10 +23,53 @@
     width: 100%; height: 100%;
     
     text-align: center;
+    font-family: Helvetica;
 }
 
 .background img
 {
+    margin-top: 80px;
+    width: 130px;
+}
+@media (min-width: 700px) {
+  .background img
+  {
+     margin-top: 120px;
+  }
+}
+@media (min-width: 1100px) {
+  .background img
+  {
+     width: 160px;
+     margin-top: 180px;
+  }
+}
+
+.background h1
+{
+    margin-top: 60px;
+    font-size: 22px;
+}
+
+.background h1 .blue-dark
+{
+    color: #636769; 
+}
+
+.background h1 .blue
+{
+    color: #2C607C;
+}
+
+.background h1 .black
+{
+    color: black;
+}
+
+.background h2
+{
+    margin-top: 45px;
+    font-size: 14px;
 }
 
 /* ==========================================================================
