--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	padding-bottom: 50px;
 	text-align: center;
 	font-family: Helvetica;
 	font-style: normal;
