--- a/css/main.css
+++ b/css/main.css
@@ -17,14 +17,14 @@
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	padding-bottom: 50px;
+	padding-bottom: 100px;
 	text-align: center;
 	font-family: Helvetica;
 	font-style: normal;
 	background-attachment: fixed;
 	background-image: url(../img/background.png);
 	background-repeat: no-repeat;
-	background-position: 20% 0%;
+	background-position: center center;
 }
 
 .background img.logo
