--- a/css/main.css
+++ b/css/main.css
@@ -17,16 +17,16 @@
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	padding-bottom: 100px;
+	padding-bottom: 50px;
 	text-align: center;
 	font-family: Helvetica;
 	font-style: normal;
 	background-attachment: fixed;
-	/*background-image: url(../img/background.png);*/
+	/*background-image: url(../img/background.png);
+		background-position: center center;*/
 	background-repeat: no-repeat;
-	background-position: center center;
 	background-color:#06080a;
-	border: 20px solid #ffffff;
+	border: 15px solid #ffffff;
 	 
 }
 
