--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover;
+	/* background-size: cover; */
 	padding-bottom: 50px;
 	text-align: center;
 	font-family: Helvetica;
@@ -86,6 +86,7 @@
 	margin-top: 45px;
 	font-size: 12px;
 	font-weight: lighter;
+	color: #c2c3c4;
 }
 .redes
 {
