--- a/css/main.css
+++ b/css/main.css
@@ -62,8 +62,8 @@
 .background h1
 {
 	margin-top: 60px;
-	font-size: 22px;
-	font-weight: lighter;
+	font-size: 20px;
+	font-weight: normal;
 }
 
 .background h1 .blue-dark
