--- a/css/main.css
+++ b/css/main.css
@@ -26,10 +26,10 @@
 	background-position: center center;*/
 	background-repeat: no-repeat;
 	background-color:#06080a;
-	border: 15px solid #ffffff;
+	border: 10% solid #ffffff;
 	position: absolute;
-  	height: 100%;
-  	width: 100%;
+  	height: 90%;
+  	width: 90%;
 }
 	 
 }
