--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	/* background-size: cover; */
-	padding-bottom: 50px;
+
 	text-align: center;
 	font-family: Helvetica;
 	font-style: normal;
@@ -26,10 +26,11 @@
 	background-position: center center;*/
 	background-repeat: no-repeat;
 	background-color:#06080a;
-	border: 10% solid #ffffff;
+	border: 10px solid #ffffff;
 	position: absolute;
-  	height: 90%;
-  	width: 90%;
+	padding-bottom: 50px;  	
+	height: 100%;
+  	width: 100%;
 }
 	 
 }
